<resources>
    <string name="app_name">NoQueue Business</string>
    <string name="app_name_splash">Business</string>
    <string name="prompt_email">email</string>
    <string name="prompt_pwd">password</string>
    <string name="sign_in">Login</string>
    <string name="forget_pwd"><u>Forgot Password</u></string>
    <string name="become_merchant"><u>Register Your Business</u></string>
    <string name="error_email_blank">Please enter email id</string>
    <string name="error_email_invalid">Please enter valid email</string>
    <string name="error_pwd_blank">Please enter password</string>
    <string name="error_login">Invalid Credentials</string>
    <string name="empty_list">You are not assign \n to any queue.</string>
    <string name="networkerror">Network Error</string>
    <string name="offline">Network unavailable. Please connect your device to network.</string>
    <string name="ok">OK</string>
    <string name="in_Queue">In Queue</string>
    <string name="serving">Serving </string>
    <string name="start">Start </string>
    <string name="continues">Continue</string>
    <string name="join">JOIN</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="done">Done </string>
    <string name="closed">Closed </string>
    <string name="create_another">Create another token </string>
    <string name="error_start">Queue has not started, you cannot skip.</string>
    <string name="error_done">No one in the queue. you cannot skip</string>
    <string name="error_empty">No one in the queue </string>
    <string name="error_empty_wait">No one in the queue. Please wait </string>
    <string name="error_done_next">Everyone in the queue has been served. Please wait for someone to join.</string>
    <string name="screen_queue">Queues</string>
    <string name="screen_queue_detail">Queue Detail </string>
    <string name="screen_settings">Queue Settings</string>
    <string name="screen_settings_all_days">All Day Queue Settings</string>
    <string name="screen_out_of_sequence">People in Queue</string>
    <string name="screen_notification">Notifications</string>
    <string name="exit_the_app">Press back again to exit</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_logout">Logout</string>
    <string name="msg_logout">Would you like to logout?</string>
    <string name="raleway_bold_font">fonts/raleway_bold.ttf</string>
    <string name="raleway_regular_font">fonts/raleway_regular.ttf</string>
    <string name="roboto_light_font">fonts/roboto_light.ttf</string>
    <string name="roboto_regular_font">fonts/roboto_regular.ttf</string>
    <string name="counter_name">Enter counter name</string>
    <string name="error_counter_empty">Please enter counter name</string>
    <string name="last_update">Updated:</string>
    <string name="pause">Pause</string>
    <string name="empty_counter">Please enter counter name</string>
    <string name="dayclosed">Closed for every %1$s of the week</string>
    <string name="preventjoining">Stop issuing tokens</string>
    <string name="name_unavailable">N/A</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="setting">Queue Settings</string>
    <string name="error_pwd_length">Password length should be greater than 6</string>
    <string name="authentication_fail">Authentication failure</string>
    <string name="authentication_fail_msg">Please login again.</string>
    <string name="copy_right">Website: https://noqapp.com\n\n NoQueue &#174; is a trademark of NoQueue Inc.\n 2022 \u00a9 NoQueue Inc</string>
    <string name="unregister_user">N/A</string>
    <string name="error_user_served">%1$s is being currently served.</string>
    <string name="error_client_just_acquired">Client is just acquired by someone else</string>
    <string name="error_client_acquired">Client is acquired by someone else</string>
    <string name="error_client_acquired_by_you">Client is acquired by you</string>
    <string name="btn_playstore">Open Play Store</string>
    <string name="playstore_update_title">Newer App Version Available</string>
    <string name="playstore_update_msg">New version of NoQueue Merchant is available on play store. Please update your app to latest version.\n</string>
    <string name="error_client_left_queue">Client cannot be acquired as client has left the queue.</string>
    <string name="msg_client_available">Can be acquired</string>
    <string name="msg_client_acquired_by_you">Acquired by you</string>
    <string name="msg_client_already_acquired">Acquired by someone else</string>
    <string name="msg_client_left_queue">Has left the Queue</string>
    <string name="create_token">Create Token</string>
    <string name="unlimited_token">Un-limited tokens</string>
    <string name="limited_token">Limited tokens</string>
    <string name="error_time">Time has to be greater than 12:00 AM</string>
    <string name="error_access_denied">You have logged in successfully but not authorized to access. Please contact your admin for permission.</string>
    <string name="text_delay">Change today\'s arrival time</string>
    <string name="error_delay_time">Arrival time should be between Queue start time and Queue close time.</string>
    <string name="queue_closed">Queue Closed</string>
    <string name="notification_alert">You don\'t have any notifications.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="screen_queue_chart_detail">Charts</string>
    <string name="msg_merchant_served">Serviced</string>
    <string name="msg_merchant_skip">Skipped</string>
    <string name="service_time">Current Patient \n Service time</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_all_field_required">All fields are required</string>
    <string name="prompt_user_name">User Name</string>
    <string name="prompt_gender">Gender</string>
    <string name="prompt_marital_status">marital status</string>
    <string name="action_update">Update Profile</string>
    <string name="phone">Phone <font color='red'>\u002A</font></string>
    <string name="c_phone">Customer Mobile No.<font color='red'>\u002A</font></string>
    <string name="name">Name <font color='red'>\u002A</font></string>
    <string name="birthday">Birthday <font color='red'>\u002A</font></string>
    <string name="mail">Mail </string>
    <string name="gender">Gender <font color='red'>\u002A</font></string>
    <string name="prompt_address_status">Address (Primary)</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="error_name_blank">Please enter name</string>
    <string name="error_name_length">Name length should be at least 3 or higher</string>
    <string name="error_invalid_email">Please enter valid email</string>
    <string name="error_invalid_date">Please select a valid date</string>
    <string name="error_past_date">Please select a date in future</string>
    <string name="error_dob_blank">Please enter date of birth</string>
    <string name="error_dob_format">Please enter date of birth in yyyy-MM-dd format</string>
    <string name="create_case">Case History</string>
    <string name="notification_setting">Notification</string>
    <string name="broadcast_message">Send Message</string>
    <string name="notify_stocks">Notify New Stock</string>
    <string name="language_setting">Change Language</string>
    <string name="lang_dialog_title">Change Language</string>
    <string name="hindi">Hindi</string>
    <string name="english">English</string>
    <string name="error_mobile_blank">Please enter phone number</string>
    <string name="error_customer_id">Please enter Customer Id</string>
    <string name="error_customer_name">Please enter Customer Name</string>
    <string name="error_patient_id">Please enter Patient Id</string>
    <string name="error_patient_name">Please enter Patient Name</string>
    <string name="error_title_blank">Please enter message title</string>
    <string name="error_title_min_length">Title length should be more than 3</string>
    <string name="error_body_blank">Please enter message body</string>
    <string name="login_hint">Phone no. without country code</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code sent to above mobile number</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_too_many_request">Exceeded OTP request limit</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">Enter OTP</string>
    <string name="login">Login</string>
    <string name="invitecode">Invite code</string>
    <string name="btnregister">Continue Register</string>
    <string name="error_pwd_not_match">Both password should match</string>
    <string name="password">Password <font color='red'>\u002A</font></string>
    <string name="update_medical_history">Submit Case History</string>
    <string name="change_name">Change Patient</string>
    <string name="update_details">Update Details</string>
    <string name="patient_details">Business Patient ID</string>
    <string name="customer_id">Reg. Id</string>
    <string name="education">Education</string>
    <string name="experience">Experience</string>
    <string name="error_customer_id_exist">This Customer Id already associated with the customer</string>
    <string name="order_details">Order Details</string>
    <string name="about_me">About Me</string>
    <string name="awards">Awards</string>
    <string name="license">License</string>
    <string name="practice_start">Practice Start</string>
    <string name="error_customer_id_input">Only letters or numbers are allowed</string>
    <string name="give_discount">Applicable discount</string>
    <string name="setting_token_timing">Today\'s Token timing</string>
    <string name="setting_sun_token_timing">Sunday</string>
    <string name="setting_mon_token_timing">Monday</string>
    <string name="setting_tue_token_timing">Tuesday</string>
    <string name="setting_wed_token_timing">Wednesday</string>
    <string name="setting_thu_token_timing">Thursday</string>
    <string name="setting_fri_token_timing">Friday</string>
    <string name="setting_sat_token_timing">Saturday</string>
    <string name="setting_issue_token_from">Issue token from</string>
    <string name="setting_stop_issuing_token">Stop issuing token after</string>
    <string name="setting_q_timing">Today\'s Queue timing</string>
    <string name="setting_sun_q_timing">Sunday\'s Queue timing</string>
    <string name="setting_mon_q_timing">Monday\'s Queue timing</string>
    <string name="setting_tue_q_timing">Tuesday\'s Queue timing</string>
    <string name="setting_wed_q_timing">Wednesday\'s Queue timing</string>
    <string name="setting_thu_q_timing">Thursday\'s Queue timing</string>
    <string name="setting_fri_q_timing">Friday\'s Queue timing</string>
    <string name="setting_sat_q_timing">Saturday\'s Queue timing</string>
    <string name="setting_q_start_time">Queue start time</string>
    <string name="setting_q_close_time">Queue close time</string>
    <string name="setting_q_lunch_timing">Today\'s lunch timing</string>
    <string name="setting_sun_q_lunch_timing">Sunday\'s lunch timing</string>
    <string name="setting_mon_q_lunch_timing">Monday\'s lunch timing</string>
    <string name="setting_tue_q_lunch_timing">Tuesday\'s lunch timing</string>
    <string name="setting_wed_q_lunch_timing">Wednesday\'s lunch timing</string>
</resources>