<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#99ffffff"
            android:orientation="vertical">


    <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">


        <TextView
                style="@style/style_register_tv"
                android:text="@string/phone"/>


        <EditText
                android:id="@+id/edt_phone"
                style="@style/style_register_edt"
                android:inputType="phone"
                android:maxLength="15"/>


        <TextView
                style="@style/style_register_tv"
                android:text="@string/name"/>


        <EditText
                android:id="@+id/edt_name"
                style="@style/style_register_edt"
                android:inputType="text"/>

        <TextView
                style="@style/style_register_tv"
                android:text="@string/mail"/>


        <EditText
                android:id="@+id/edt_email"
                style="@style/style_register_edt"
                android:inputType="textEmailAddress"/>


        <TextView
                style="@style/style_register_tv"
                android:text="@string/birthday"/>

        <EditText
                android:id="@+id/edt_birthday"
                style="@style/style_register_edt"/>


        <TextView
                style="@style/style_register_tv"
                android:text="@string/gender"/>

        <segmented_control.widget.custom.android.com.segmentedcontrol.SegmentedControl
                xmlns:segmentedcontrol="http://schemas.android.com/apk/res-auto"
                android:id="@+id/sc_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                segmentedcontrol:distributeEvenly="true"
                segmentedcontrol:radius="6dp"
                segmentedcontrol:columnCount="3"
                segmentedcontrol:radiusForEverySegment="false"
                segmentedcontrol:segmentHorizontalMargin="0dp"
                segmentedcontrol:segmentVerticalMargin="0dp"
                segmentedcontrol:strokeWidth="1dp"
                segmentedcontrol:textSize="@dimen/text_size_fourteen"
                segmentedcontrol:focusedBackgroundColor="@color/segment_bg_color"
                segmentedcontrol:selectedBackgroundColor="@color/segment_bg_color_select"
                segmentedcontrol:selectedStrokeColor="@color/segment_bg_color_select"
                segmentedcontrol:selectedTextColor="@color/segment_text_color_select"
                segmentedcontrol:textVerticalPadding="7dp"
                segmentedcontrol:unSelectedBackgroundColor="@color/segment_bg_color"
                segmentedcontrol:unSelectedStrokeColor="@color/segment_bg_color_select"
                segmentedcontrol:unSelectedTextColor="@color/segment_text_color"/>


        <TextView
                style="@style/style_register_tv"
                android:text="@string/prompt_address_status"/>


        <EditText
                android:id="@+id/edt_address"
                style="@style/style_register_edt"
                android:layout_marginBottom="10dp"
                android:gravity="top|left"
                android:inputType="textMultiLine"
                android:lines="2"
                android:maxLines="2"
                android:minLines="2"
                android:textSize="@dimen/text_size_fourteen"
                android:singleLine="false"/>


        <Button
                android:id="@+id/btn_update"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:paddingRight="100dp"
                android:paddingLeft="100dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_gradient_round"
                android:gravity="center"
                android:text="@string/update"
                android:textAllCaps="false"
                android:textColor="@color/btn_txt_color"
                android:textSize="@dimen/text_size_fourteen"/>
    </LinearLayout>


</ScrollView>