<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@android:color/white"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:padding="10dp"
            android:layout_marginBottom="10dp"
            android:inputType="textEmailAddress"
            android:background="@drawable/square_white_bg_drawable"
            android:maxLines="1"
            android:singleLine="true" />

        <EditText
            android:id="@+id/edt_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_pwd"
            android:padding="10dp"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:background="@drawable/square_white_bg_drawable"
            android:layout_marginBottom="10dp"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />

        <com.noqapp.merchant.views.customsviews.CustomButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@mipmap/send_invite_small"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

    </LinearLayout>
</ScrollView>
