<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@android:color/white"
    android:gravity="center"
    android:paddingTop="10dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <TextView
            android:id="@+id/tvtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/title_logout"
            android:textColor="@color/color_action_bar"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/edt_counter"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/tvtitle"
            android:layout_marginBottom="10dp"
            android:text="@string/msg_logout"
            android:gravity="center"
            android:maxLines="1"
            android:singleLine="true" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/edt_counter"
            android:background="@color/color_grey_bg" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edt_counter"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:weightSum="1">

            <Button
                android:id="@+id/btn_no"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:layout_marginRight="10dp"
                android:layout_weight="0.5"
                android:background="@android:color/transparent"
                android:text="@string/no"
                android:textAllCaps="false"
                android:textColor="@color/colorMobile"
                android:textSize="18sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/color_grey_bg" />

            <Button
                android:id="@+id/btn_yes"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_below="@+id/llotp"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="10dp"
                android:layout_weight="0.5"
                android:background="@android:color/transparent"

                android:text="@string/yes"
                android:textAllCaps="false"
                android:textColor="@color/colorMobile"
                android:textSize="18sp" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>